<resources>
    <string name="app_name">念诗</string>
    <string name="enter">立刻体验</string>
    <string name="main_page">首页</string>
    <string name="poetry_library">诗词库</string>
    <string name="personal_center">个人空间</string>
    <string name="my_message">我的消息</string>
    <string name="my_poetry_anthology">我的诗集</string>
    <string name="setting">设置</string>
    <string name="help">帮助</string>
    <string name="feedback">反馈</string>
    <string name="username_normal">念诗用户</string>
    <string name="night_mode">夜间模式</string>
    <string name="tab_every_day">每日一句</string>
    <string name="tab_comment">诗文评</string>
    <string name="tab_creation">作诗</string>
    <string name="daytime_mode">日间模式</string>
</resources>
